fixed founders spacing

--- a/public/style/css/stylesheet-montserrat.css
+++ b/public/style/css/stylesheet-montserrat.css
@@ -82,6 +82,7 @@ body {
     position: absolute;
     left: 50px;
     top: 0px;
+    font-family: montserratsemibold;
 }
 
 #lifesci{
@@ -199,11 +200,23 @@ a[href^="mailto:"] {
 }
 
 #foundertable {
-    font-size: 18px;
+    font-size: 14px;
     line-height: 2em;
 }
 
 #foundertable td {
+    text-align: left;
+}
+
+td.container > div {
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+}
+
+td.container {
+    height: 100px;
+    width: 300px;
     padding: 0;
 }
 
